--- a/part-self-learning/backend/package.json
+++ b/part-self-learning/backend/package.json
@@ -11,6 +11,7 @@
   "author": "Poonam Sagar",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
